Fixing text spacing

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -131,20 +131,21 @@ section {
 }
 p {
     text-align: justify;
-   
+    margin-bottom: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .first {
     
 }
 ul {
     list-style-type: square;
+    margin-bottom: 5%;
 }
 footer { 
     margin-left: 10px;
 }
-ul {
-    text-indent: 20%;
-}
+
 
 @media only screen and (max-width:600px) {
     main {
